--- a/index.html
+++ b/index.html
@@ -14,11 +14,32 @@
 <h2>Hobbies</h2>
 <ul>
     <li>Chess</li>
-    <li>another thing</li>
+    <li>Building lego sets</li>
+    <li>Video Games</li>
+    <li>Collecting Figurines</li>
+    <li>Peseficly Virtual Reality</li>
 </ul>
-<ul>Swimming</ul>
-<ul>Video Games</ul>
-</tr>
+<h2>Portofolio</h2>
+<h2>Weekly Schedule</h2>
+     
+
+<table>
+    <tr>
+        <th>
+            Sunday
+            <li>7:00 Wake up</li>
+        </th>
+        <th>
+            Monday
+            <li>7:00 Wake up</li>
+        </th>
+        <th>
+            Tuesday
+            <li>7:00 Wake up</li>
+        </th>
+    </tr>
+
+</table>
 <body>
 
 </body>
