--- a/index.html
+++ b/index.html
@@ -4,43 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            background-color:lightpink
+        }
+
+        body {
+            background-color:salmon
+        }
+
+        h2 {
+            background-color:indianred
+        }
+
+        p {
+            background-color:rosybrown
+        }
+    </style>
 </head>
-<img src="Miguelb.jpg">
-<tr>
-    <h1>Fabians webpage</h1>
-    <h2>Bio</h2>
-</tr>
-<tr><p>Hello my name is Fabian im 14 yars old and live in Tuscon Arizona. I am freshman at pueblo highscool.</p>
-<h2>Hobbies</h2>
-<ul>
-    <li>Chess</li>
-    <li>Building lego sets</li>
-    <li>Video Games</li>
-    <li>Collecting Figurines</li>
-    <li>Peseficly Virtual Reality</li>
-</ul>
-<h2>Portofolio</h2>
-<h2>Weekly Schedule</h2>
-     
 
-<table>
-    <tr>
-        <th>
-            Sunday
-            <li>7:00 Wake up</li>
-        </th>
-        <th>
-            Monday
-            <li>7:00 Wake up</li>
-        </th>
-        <th>
-            Tuesday
-            <li>7:00 Wake up</li>
-        </th>
-    </tr>
-
-</table>
 <body>
+    <img src="Miguelb.jpg">
+    <tr>
+        <h1>Fabians webpage</h1>
+        <h2>Bio</h2>
+    </tr>
+    <tr><p>Hello my name is Fabian im 14 yars old and live in Tuscon Arizona. I am freshman at pueblo highscool.</p>
+    <h2>Hobbies</h2>
+    <ul>
+        <li>Chess</li>
+        <li>Building lego sets</li>
+        <li>Video Games</li>
+        <li>Collecting Figurines</li>
+        <li>Peseficly Virtual Reality</li>
+    </ul>
+    <h2>Portofolio</h2>
+    <h2>Weekly Schedule</h2>
+        
 
+    <table>
+        <tr>
+            <th>
+                Sunday
+                <li>7:00 Wake up</li>
+            </th>
+            <th>
+                Monday
+                <li>7:00 Wake up</li>
+            </th>
+            <th>
+                Tuesday
+                <li>7:00 Wake up</li>
+            </th>
+        </tr>
+
+    </table>
 </body>
 </html>
