--- a/index.html
+++ b/index.html
@@ -4,23 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1 {
-            background-color:lightpink
-        }
-
-        body {
-            background-color:salmon
-        }
-
-        h2 {
-            background-color:indianred
-        }
-
-        p {
-            background-color:rosybrown
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -44,18 +28,36 @@
 
     <table>
         <tr>
-            <th>
-                Sunday
-                <li>7:00 Wake up</li>
+            <th class="list">
+                Sunday                
             </th>
             <th>
                 Monday
-                <li>7:00 Wake up</li>
+                7:00am Wake up
             </th>
             <th>
                 Tuesday
-                <li>7:00 Wake up</li>
+                <li>7:00am Wake up</li>
             </th>
+            <th>
+                Wensday
+                <li>7:30am Wake up</li>
+            </th>
+            <th>
+                Thursday
+                <li>7:00am Wake up</li>
+            </th>
+            <th>
+                Friday
+                <li>7:00am Wake up</li>
+            </th>
+            <th>
+                Saturday
+                <li>10:00am wake up</li>
+            </th>
+        </tr>
+        <tr>
+            <td>10:00am Wake up</td>
         </tr>
 
     </table>
